:books: docs: Nova documentação para rota de inativação de usuario e ajustes ma listarUsuarios
